Changelog
=========


2.0.4 (unreleased)
------------------

- Adjust the _principal_search_results wrapper,
  so that it constrain the principal list on groups from the current client.
  [phgross]

- Disalbe the Administrator Role, it should not longer be displayed and configurable in the sharing view.
  Issue #1288 Freigabeansicht:  Rollenanpassung nur fuer Mandanten user moeglich machen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1288
  [phgross]

- Implemented a wrapper for the _principal_search_results method,
  which constrain the principal list to the client assigned users.
  Issue #1288 Freigabeansicht:  Rollenanpassung nur fuer Mandanten user moeglich machen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1288
  [phgross]


2.0.3 (2011-12-20)
------------------

- Fixed bug that prevented obj security from being updated after changes in
  the sharing tab.
  [lgraf]


2.0.2 (2011-12-06)
------------------

- Fixed IE bug in sharing view: Because our special needs browser can't deal with
  shorthand tag syntax, we use explicit opening and closing span tags.
  [lgraf]


2.0.1 (2011-12-06)
------------------

- Fixed update_inherit method: the avoiding definitive lose of access implemenation should be done with the actual user instead of the portal owner.
  Issue #1245 Neue Rolle einfuehren um local roles anzupassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1245
  [phgross]


2.0 (2011-11-17)
----------------

- Added integratoin and unittests
  [eschmutz]

- Added new role "Role Manager" that has permissions to delegate roles via
  the sharing tab.
  #1245 Neue Rolle einführen um local roles anzupassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1245/
  [lgraf]

- Added new events for local_roles modifications, which allows to generate journal entries after a local_role modification.